--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>RATINHOOO</title>
+    <title>RATINHO</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,7 +18,7 @@
 </head>
 <body>
 
-    <h1>ratinho soundeffect</h1>
+    <h1>ratinho soundboard</h1>
 
     <section class="teclado">
         <button class="tecla tecla_rapaz">rapaz</button>
